* c-common.h (GOTO_FAKE_P): New macro. 	* tree-inline.c (GOTO_FAKE_P): Set. 	* c-tree.texi (GOTO_FAKE_P): Document. 	* Makefile.in (c-semantics.o): Add predict.h dependency. 	(stmt.o): Fix predict.h depdendency.
	* c-semantics.c: Include predict.h;
	(expand_stmt): Drop prediction on goto.
	* predict.c (preocess_note_predictions): Fix formating.
	* predict.def (PRED_CONTINUE, PRED_NEGATIVE_RETURN): New predictors.
	* stmt.c (maybe_error_return): Kill.
	(return_prediction): New.
	(expand_goto): Do not generate predictions.
	(expand_continue_loop): Do generate prediction.
	(expand_null_return): Do not generate predictions.
	(expand_value_return): Use return_prediction.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@47342 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/doc/c-tree.texi
+++ b/cfg-branch/gcc/doc/c-tree.texi
@@ -1278,6 +1278,7 @@ This predicate holds if the function an overloaded
 @findex FOR_BODY
 @tindex GOTO_STMT
 @findex GOTO_DESTINATION
+@findex GOTO_FAKE_P
 @tindex HANDLER
 @tindex IF_STMT
 @findex IF_COND
@@ -1511,11 +1512,13 @@ expressions.
 
 @item GOTO_STMT
 
-Used to represent a @code{goto} statement.  The @code{GOTO_DESTINATION}
-will usually be a @code{LABEL_DECL}.  However, if the ``computed
-goto'' extension has been used, the @code{GOTO_DESTINATION} will be an
-arbitrary expression indicating the destination.  This expression will
-always have pointer type.
+Used to represent a @code{goto} statement.  The @code{GOTO_DESTINATION} will
+usually be a @code{LABEL_DECL}.  However, if the ``computed goto'' extension
+has been used, the @code{GOTO_DESTINATION} will be an arbitrary expression
+indicating the destination.  This expression will always have pointer type.
+Additionally the @code{GOTO_FAKE_P} flag is set whenever the goto statement
+does not come from source code, but it is generated implicitly by the compiler.
+This is used for branch prediction.
 
 @item HANDLER
 
