--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-26  Jason Merrill  <jason@redhat.com>
+
+	* call.c (joust): Remove COND_EXPR hack.
+
 2001-11-25  Aldy Hernandez  <aldyh@redhat.com>
 
 	* cp/search.c (lookup_base_r): Declare bk in variable declaration
