--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-26  David Edelsohn  <edelsohn@gnu.org>
+
+	* doc/trouble.texi: Remove outdated RS/6000 comments.
+
 Mon Nov 26 13:49:41 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* final.c (walk_alter_subreg): Fix return value.
