--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-26  Loren J. Rittle  <ljrittle@acm.org>
+
+	* config/stormy16/stormy16.h: Remove DEFAULT_VTABLE_THUNKS.
+	* config/i386/netbsd-elf.h: Likewise.
+
 2001-11-26  David Edelsohn  <edelsohn@gnu.org>
 
 	* doc/trouble.texi: Remove outdated RS/6000 comments.
