--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+Mon Nov 26 12:37:05 2001  Jeffrey A Law  (law@cygnus.com)
+
+	* df.h (transfer_function_sbitmap): Use PARAMS around argument
+	list in function prototypes.
+	(transfer_function_bitmap): Likewise.
+
 2001-11-26  Loren J. Rittle  <ljrittle@acm.org>
 
 	* config/stormy16/stormy16.h: Remove DEFAULT_VTABLE_THUNKS.
