--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-11-26  Alexandre Oliva  <aoliva@redhat.com>
+
+	* toplev.c (process_options): Don't force
+	flag_optimize_sibling_calls to zero just because exceptions are
+	enabled.
+
 Mon Nov 26 12:37:05 2001  Jeffrey A Law  (law@cygnus.com)
 
 	* df.h (transfer_function_sbitmap): Use PARAMS around argument
