--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-26  David Edelsohn  <edelsohn@gnu.org>
+
+	* rs6000.c (output_mi_thunk): Handle minimal-toc and call
+	correct function on AIX.
+
 2001-11-26  Alexandre Oliva  <aoliva@redhat.com>
 
 	* toplev.c (process_options): Don't force
