--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-26  Richard Henderson  <rth@redhat.com>
+
+	* config/elfos.h (SELECT_SECTION): Don't check TREE_READONLY
+	for CONSTRUCTOR.
+
 2001-11-26  David Edelsohn  <edelsohn@gnu.org>
 
 	* rs6000.c (output_mi_thunk): Handle minimal-toc and call
