* Make-lang.in (gnatbind, gnatmake, gnatbl, gnatchop, gnatcmd,         gnatlink, gnatkr, gnatls, gnatmem, gnatprep, gnatpsta, gnatpsys,         gnatxref, gnatfind, gnatlbr): Depend on CONFIG_H and prefix.o.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47358 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,9 @@
+2001-11-26  Richard Henderson  <rth@redhat.com>
+
+	* Make-lang.in (gnatbind, gnatmake, gnatbl, gnatchop, gnatcmd,
+	gnatlink, gnatkr, gnatls, gnatmem, gnatprep, gnatpsta, gnatpsys,
+	gnatxref, gnatfind, gnatlbr): Depend on CONFIG_H and prefix.o.
+
 2001-11-25  Laurent Guerby  <guerby@acm.org>
 
 	* sysdep.c (rts_get_*): Fix style.
