--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-26  DJ Delorie  <dj@redhat.com>
+
+	* expr.c (store_constructor): Actually use the value computed
+	if WORD_REGISTER_OPERATIONS.
+
 2001-11-26  Richard Henderson  <rth@redhat.com>
 
 	* config/elfos.h (SELECT_SECTION): Don't check TREE_READONLY
