--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-26  Ziemowit Laski  <zlaski@apple.com>
+
+	* MAINTAINERS (write-after-approval): Add self.
+
 2001-11-17  Craig Rodrigues  <rodrigc@gcc.gnu.org>
 
 	* MAINTAINERS (GNATS only accounts): Remove self.
