--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-11-26  Richard Henderson  <rth@redhat.com>
+
+	* config/ia64/sysv4.h (DBX_DEBUGGING_INFO): Undef.
+	* config/ia64/aix.h (PREFERRED_DEBUGGING_TYPE): Remove
+	commented out override.
+
 2001-11-26  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* cppfiles.c (stack_include_file): Don't optimize zero-length
