--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-27  Laurent Guerby  <guerby@acm.org>
+
+	* Makefile.in: Regenerate Ada dependencies.
+
 2001-11-26  Richard Henderson  <rth@redhat.com>
 
 	* Make-lang.in (gnatbind, gnatmake, gnatbl, gnatchop, gnatcmd,
