--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-27  Richard Henderson  <rth@redhat.com>
+
+	* ifcvt.c (noce_try_store_flag_constants): Test for overflow
+	in computing DIFF.
+
 2001-11-27  Zack Weinberg  <zack@codesourcery.com>
 
 	* cppfiles.c (read_include_file): Add comment.
