* gcc.c: Fix typo PREFERRED_DEBUGGING_FORMAT -> 	PREFERRED_DEBUGGING_TYPE.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47377 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-27  Andreas Schwab  <schwab@suse.de>
+
+	* gcc.c: Fix typo PREFERRED_DEBUGGING_FORMAT ->
+	PREFERRED_DEBUGGING_TYPE.
+
 Tue Nov 27 08:21:47 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 	* Makefile.in (c-lang.o): Depends on langhooks-def.h.
