--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,11 @@
 2001-11-27  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
+	* collect2.c: Check HAVE_DUP2 instead of NO_DUP2.
+	(dup2): Make static and add prototype.
+	* m68k/plexus.h: Don't define NO_DUP2.
+	* configure.in (AC_CHECK_FUNCS): Add dup2.
+	* config.in, configure: Regenerate.
+
 	* ia64/aix.h (REG_SIZE): Don't #undef.
 	* sparc.h (REG_SIZE): Delete.
 	* flow.c (mark_used_regs): Don't use REG_SIZE.
